# MoE-Qi

./: .gitignore  README.md  common.bat  compile-dll.bat  compile-wasm.bat
.github/workflows/: release.yml
doc/: crates.js  help.html  settings.html  src-files.js
doc/moeqi/: all.html  enum.CodecKind.html  enum.ColorTransform.html  enum.MoeqiError.html  enum.PixelFormat.html  fn.decode.html  fn.encode.html  index.html  sidebar-items.js  struct.CodecConfig.html  struct.Image.html  type.Result.html
doc/moeqi_core/: all.html  index.html  sidebar-items.js
doc/moeqi_ffi/: all.html  fn.moeqi_encode.html  fn.moeqi_free_buf.html  index.html  sidebar-items.js  struct.MoeqiBuf.html
doc/moeqi_wasm/: all.html  index.html  sidebar-items.js  struct.Decoded.html
doc/search.index/: 114dc21e3f5b.js  148ce1ce50f0.js  18203e1eebea.js  1c0b7c62edc4.js  1e2e62db06e0.js  34095f3c0d32.js  397f6f2558f4.js  3fa857fbbbc2.js  49e358fb5a83.js  5511b8f70f15.js  61ffad901d82.js  695313b010b8.js  78cc25421802.js  7c1e9ade625b.js  7d57c64889fd.js  7d8d97c787e2.js  7e123de2d042.js  root.js
doc/src/moeqi/: lib.rs.html
doc/static.files/: SourceSerif4-LICENSE-a2cfd9d5.md  rustdoc-ca0dd0c4.css
moeqi/: Cargo.toml
moeqi-core/: Cargo.toml
moeqi-core/src/: bitstream.rs  codec_huff.rs  codec_varint.rs  color.rs  decode.rs  error.rs  huff_canonical.rs  lib.rs  metrics.rs  model.rs  pack_mqb.rs  types.rs
moeqi-ffi/: Cargo.toml
moeqi-ffi/src/: lib.rs
moeqi-wasm/: Cargo.toml
moeqi-wasm/pkg/: moeqi_wasm.d.ts  moeqi_wasm.js  moeqi_wasm_bg.wasm
moeqi-wasm/src/: lib.rs
moeqi/src/: lib.rs
(+111 files in other folders)
